# godot-sidekick-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: dump.py  type_info.json
src/: extract_into_function.rs  filedb.rs  inlay_hints.rs  main.rs  symbol_table.rs  typedb.rs  utils.rs
