[package]
name = "godot-sidekick-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tree-sitter = "0.25.8"
tree-sitter-gdscript = { git = "https://github.com/PrestonKnopp/tree-sitter-gdscript", tag = "v6.0.0" }
streaming-iterator = "0.1.9"
num_enum = "0.7.4"
bitflags = { version = "2.9.3", features = [ "serde" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.2", features = [ "derive" ] }
ropey = { version = "2.0.0-beta.1", features = ["metric_chars"] }
parking_lot = "0.12.4"
async-lsp = { version = "0.2.2", features = ["tokio"] }
futures = "0.3.31"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower = "0.5.2"
